Fixed tab title cut off when its italics.

--- a/src/components/Tabs/styles.module.scss
+++ b/src/components/Tabs/styles.module.scss
@@ -51,6 +51,7 @@
 
   .title {
     font-size: 12px;
+    margin-right: 1px;
   }
 
   .subTitle {
